# envio_challenge

./: .gitignore  CMakeLists.txt  README.md  prj_build_install.sh
dev/: CMakeLists.txt
dev/apps/: CMakeLists.txt
dev/apps/envio/: CMakeLists.txt
dev/apps/envio/src/: main.cpp
dev/libs/algorithm/: CMakeLists.txt
dev/libs/algorithm/include/algorithm/: sort3elements.h
dev/libs/algorithm/src/: sort3elements.cpp
dev/resources/arch/arm/boot/dts/: am335x-bone-envio.dts
dev/resources/scripts/bash/: gpio_toggle
dev/scripts/bash/: gpio_toggle
dev/scripts/etc/: enviod.conf
dev/scripts/etc/systemd/system/: enviod.service
dev/scripts/python/: gpio.py  gpio_toggle.py
dev/tests/algorithm/: CMakeLists.txt
dev/tests/algorithm/src/: sort3elements_test.cpp
