get_filename_component(JMF_MODULE_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)

# Project's directory
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)

file(GLOB_RECURSE SRCS **.cpp)

set(JMF_LIB_MODULE_NAME_STATIC ${JMF_MODULE_NAME}-static)
add_library(${JMF_LIB_MODULE_NAME_STATIC} STATIC ${SRCS})
set_target_properties(${JMF_LIB_MODULE_NAME_STATIC}
                      PROPERTIES OUTPUT_NAME ${JMF_LIB_MODULE_NAME_STATIC})

set(JMF_LIB_MODULE_NAME_SHARED ${JMF_MODULE_NAME})
add_library(${JMF_LIB_MODULE_NAME_SHARED} SHARED ${SRCS})
set_target_properties(${JMF_LIB_MODULE_NAME_SHARED}
                      PROPERTIES OUTPUT_NAME ${JMF_LIB_MODULE_NAME_SHARED})

install(TARGETS ${JMF_LIB_MODULE_NAME_STATIC}
        LIBRARY DESTINATION lib
)

install(TARGETS ${JMF_LIB_MODULE_NAME_SHARED}
        LIBRARY DESTINATION lib
)
